# netinterfaces-manager

./: .gitignore  CMakeLists.txt  README.md  todo.md
python/: arp_protocol_types.py
source/: CMakeLists.txt
source/helpers/: socket.cpp  socket.h
source/interfaces/: .interface_manager.cpp.swp  .interface_manager.h.swp  arps_names.inc  interface_manager.cpp  interface_manager.h  net_interface.cpp  net_interface.h
source/libifman/: interface.cpp  interface.h  interface_manager.cpp  interface_manager.h
test/: test-monitor.py
watcher/: CMakeLists.txt  watcher.cpp
